@@ -154,6 +154,9 @@
 
 	Fixed estimation text in dialog (was almost single line).
 
+	Fixed recovery after a try to assign ill-formed value to 'viewcolumns'
+	option.
+
 0.8-beta to 0.8
 
 	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.
